# facemask

./: .gitignore  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: mask_model_sim.ncnn.param
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/facemask/: FaceGraphic.java  GraphicOverlay.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
